feat(JS/CSS Clock)- Complete basic clock with JS/CSS

--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -61,12 +61,80 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.01, 1.8, 0.97, 0.71);
+    }
+
+    .hour-hand {
+      width: 25%;
+      left: 25%;
+      background: red;
+      z-index: 3;
+    }
+
+    .min-hand {
+      background: yellow;
+      z-index: 2;
     }
 
   </style>
 
   <script>
+    const secHand = document.querySelector('.second-hand');
+    const minHand = document.querySelector('.min-hand');
+    const hourHand = document.querySelector('.hour-hand');
 
+    function setTime() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const minutes = now.getMinutes();
+
+      setSeconds(seconds);
+      if (seconds == 0) setMinutes(minutes);
+      if (minutes == 0) setHours(now.getHours());
+    }
+
+    function setSeconds(seconds) {
+      let degrees = getDegrees(seconds) + 90; // 90 deg offset
+
+      styleHand(secHand, degrees);
+    }
+
+    function setMinutes(minutes) {
+      let degrees = getDegrees(minutes) + 90;
+
+      styleHand(minHand, degrees);
+    }
+
+    function setHours(hours) {
+      let degrees = getDegrees(hours, 12) + 90;
+
+      styleHand(hourHand, degrees);
+    }
+
+    function styleHand(hand, degrees) {
+      hand.style.transform = `rotate(${degrees}deg)`;
+    }
+
+    function getDegrees(n, interval = 60) {
+      return (n / interval) * 360;
+    }
+
+    function initializeClock() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const minutes = now.getMinutes();
+
+      setSeconds(seconds);
+      setMinutes(minutes);
+      setHours(now.getHours());
+    }
+
+    setInterval(setTime, 1000);
+
+    initializeClock();
 
   </script>
 </body>
