--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -21,16 +21,15 @@
   <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
 
   <style>
-
-    /*
-      misc styles, nothing to do with CSS variables
-    */
-
+    /* DECLARE VARIABLES */
+    :root {
+      --base: #ffffff;
+      --spacing: 10px;
+      --blur: 10px;
+    }
+    /* END VARIABLES */
     body {
       text-align: center;
-    }
-
-    body {
       background: #193549;
       color: white;
       font-family: 'helvetica neue', sans-serif;
@@ -45,9 +44,31 @@
     input {
       width:100px;
     }
+
+    .hl {
+      color: var(--base);
+    }
+
+    img {
+      background: var(--base);
+      padding: var(--spacing);
+      filter: blur(var(--blur));
+    }
+
   </style>
 
   <script>
+    const inputs = document.querySelectorAll('.controls input');
+
+    function handleChange() {
+      const suffix = this.dataset.sizing || '';
+
+      document.documentElement.style.setProperty(`--${this.name}`, `${this.value}${suffix}`);
+    }
+
+    inputs.forEach(i => i.addEventListener('change', handleChange));
+    inputs.forEach(i => i.addEventListener('mousemove', handleChange));
+
   </script>
 
 </body>
