--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,29 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some(p => new Date().getFullYear() - p.year >= 19);
+    console.log({isAdult});
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdults = people.every(p => new Date().getFullYear() - p.year >= 19);
+    console.log({allAdults});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    let found = comments.find(c => c.id == 823423);
+    console.log({found});
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    let foundIdx = comments.findIndex(c => c.id == 823423);
+    const newComments = [
+      ...comments.slice(0, foundIdx),
+      ...comments.slice(foundIdx + 1)
+    ];
+    // comments.splice(foundIdx, 1);
+    // console.table(comments);
+    console.table(newComments);
 
   </script>
 </body>
